name:                aura

version:             1.1.4.1

synopsis:            A secure package manager for Arch Linux and the AUR, written in Haskell.

description:         `aura` is a package manager for Arch Linux written
                     in Haskell. It connects to both the official Arch
                     repostitories and to the AUR, allowing easy control
		     of all packages on an Arch system.
		     It allows _all_ pacman operations and provides _new_
		     custom ones for dealing with AUR packages.
		     This differs from some other AUR package managers.

homepage:            https://github.com/fosskers/aura

license:             GPL-3

license-file:        LICENSE

author:              Colin Woodbury

maintainer:          colingw@gmail.com

category:            System

build-type:          Simple

cabal-version:       >=1.8

extra-source-files:  aura.8,
                     completions/bashcompletion.sh,
                     completions/_aura

source-repository head
  type:     git
  location: git://github.com/fosskers/aura.git

executable aura
  main-is:             aura.hs

  other-modules:       Shell,
                       Internet,
                       Utilities,
                       ColourDiff,
                       Data.Algorithm.Diff,
                       Network.HTTP,
                       Aura.Bash,
                       Aura.Core,
                       Aura.Logo,
                       Aura.Time,
                       Aura.Build,
                       Aura.Cache,
                       Aura.Flags,
                       Aura.Shell,
                       Aura.State,
                       Aura.Utils,
                       Aura.Pacman,
                       Aura.MakePkg,
                       Aura.Pkgbuilds,
                       Aura.Languages,
                       Aura.Monad.Aura,
                       Aura.Dependencies,
                       Aura.AurConnection,
                       Aura.Commands.A,
                       Aura.Commands.B,
                       Aura.Commands.C,
                       Aura.Commands.L,
                       Aura.Commands.O,
                       Aura.Settings.Base,
                       Aura.Settings.Enable,
                       Aura.Settings.BadPackages,
                       Aura.Colour.Text,
                       Aura.Colour.Parser,
                       Aura.Colour.PacmanColorConf,
                       Bash.Base,
                       Bash.Parser,
                       Bash.Simplify

  build-depends:       mtl,
                       curl,
                       json,
                       unix,
                       array,
                       Cabal,
                       parsec,
                       process,
                       filepath,
                       old-time,
                       directory,
                       containers,
                       bytestring,
                       regex-pcre,
                       transformers,
                       base >= 4 && < 5
