name:                aura

version:             1.2.2.0

synopsis:            A secure package manager for Arch Linux and the AUR, written in Haskell.

description:         `aura` is a package manager for Arch Linux written
                     in Haskell. It connects to both the official Arch
                     repostitories and to the AUR, allowing easy control
		     of all packages on an Arch system.
		     It allows _all_ pacman operations and provides _new_
		     custom ones for dealing with AUR packages.
		     This differs from some other AUR package managers.

homepage:            https://github.com/fosskers/aura

license:             GPL-3

license-file:        LICENSE

author:              Colin Woodbury

maintainer:          colingw@gmail.com

category:            System

build-type:          Simple

cabal-version:       >=1.8

extra-source-files:  aura.8,
                     completions/bashcompletion.sh,
                     completions/_aura

source-repository head
  type:     git
  location: git://github.com/fosskers/aura.git

executable aura
  ghc-options:         -Wall

  main-is:             aura.hs

  other-modules:       Shell,
                       Internet,
                       Utilities,
                       Data.Algorithm.Diff,
                       Network.HTTP,
                       Aura.Bash,
                       Aura.Core,
                       Aura.Diff,
                       Aura.Logo,
                       Aura.Time,
                       Aura.Build,
                       Aura.Cache,
                       Aura.Flags,
                       Aura.Install,
                       Aura.Shell,
                       Aura.State,
                       Aura.Utils,
                       Aura.Pacman,
                       Aura.MakePkg,
                       Aura.Conflicts,
                       Aura.Languages,
                       Aura.Monad.Aura,
                       Aura.Dependencies,
                       Aura.Colour.Text,
                       Aura.Packages.ABS,
                       Aura.Packages.AUR,
                       Aura.Packages.Repository,
                       Aura.Commands.A,
                       Aura.Commands.B,
                       Aura.Commands.C,
                       Aura.Commands.L,
                       Aura.Commands.O,
                       Aura.Commands.M,
                       Aura.Pkgbuild.Base,
                       Aura.Pkgbuild.Records,
                       Aura.Pkgbuild.Editing,
                       Aura.Settings.Base,
                       Aura.Settings.Enable,
                       Bash.Base,
                       Bash.Parser,
                       Bash.Simplify

  build-depends:       mtl,
                       curl,
                       json,
                       time,
                       unix,
                       array,
                       parsec,
                       process,
                       filepath,
                       directory,
                       temporary,
                       containers,
                       bytestring,
                       regex-pcre,
                       transformers,
                       base >= 4.6 && < 5
