name:                arel
version:             1.1.0
synopsis:            Create an Aura release.
description:         Create an Aura release.
license:             GPL-3
license-file:        LICENSE
author:              Colin Woodbury
maintainer:          colingw@gmail.com
-- copyright:
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable arel
  main-is:             arel.hs

  other-modules:       Arel.Util
                     , Arel.Versions

  -- other-extensions:
  build-depends:       base >=4.8 && < 4.10
                     , optparse-generic >= 1.1 && < 1.2
                     , shelly >= 1.6 && < 1.7
                     , text >= 1.2 && < 1.3
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options: -fwarn-unused-imports -fwarn-unused-binds