cabal-version: 1.12
name:          arel
version:       1.1.0
synopsis:      Create an Aura release.
description:   Create an Aura release.
category:      System
author:        Colin Woodbury
maintainer:    colin@fosskers.ca
license:       GPL-3
license-file:  LICENSE
build-type:    Simple

executable arel
  default-language: Haskell2010
  hs-source-dirs:   ./.
  main-is:          arel.hs
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wredundant-constraints -Widentities

  build-depends:
      base              >=4.8 && <5
    , optparse-generic  >=1.1 && <1.4
    , shelly            >=1.6 && <1.9
    , text              >=1.2 && <1.3
