cabal-version: 2.2

name:         aur
version:      6.1.0.1
synopsis:     Access metadata from the Arch Linux User Repository.

description:
    Access package information from Arch Linux's AUR via its RPC interface. The
    main exposed functions reflect those of the RPC. `info` gets metadata for
    one package. `search` gets limited metadata for packages that match a given
    regex. By default this library supports version 5 of the RPC, and hence
    version 4.2+ of the AUR.

category:     Linux
homepage:     https://github.com/aurapm/aura
author:       Colin Woodbury
maintainer:   colin@fosskers.ca
copyright:    2014 - 2019 Colin Woodbury
license:      GPL-3.0-only
license-file: LICENSE
build-type:   Simple

extra-source-files:
    README.md
    CHANGELOG.md

common commons
  default-language: Haskell2010
  ghc-options:
      -Wall
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wredundant-constraints
      -Widentities
  build-depends:
      base >= 4.10 && < 5
    , http-client ^>= 0.5

library
  import: commons
  hs-source-dirs: lib
  exposed-modules:
      Linux.Arch.Aur
      Linux.Arch.Aur.Rpc
      Linux.Arch.Aur.Types
  build-depends:
      aeson >= 0.9 && < 1.5
    , errors ^>= 2.3
    , servant >= 0.9 && < 0.17
    , servant-client >= 0.13 && < 0.17
    , text

test-suite aur-test
  import: commons
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: tests
  ghc-options: -threaded -with-rtsopts=-N
  build-depends:
      aur
    , http-client-tls ^>= 0.3
    , tasty >= 0.11 && < 1.3
    , tasty-hunit >= 0.9 && < 0.11
