cabal-version:      2.2
name:               aura
version:            3.2.7
synopsis:           A secure package manager for Arch Linux and the AUR.
description:
  Aura is a package manager for Arch Linux. It connects to both the
  official Arch repostitories and to the AUR, allowing easy control of all
  packages on an Arch system. It allows /all/ pacman operations and provides
  /new/ custom ones for dealing with AUR packages. This differs from some other
  AUR package managers.

category:           System
homepage:           https://github.com/fosskers/aura
author:             Colin Woodbury
maintainer:         colin@fosskers.ca
license:            GPL-3.0-only
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  README.md
  CHANGELOG.md
  doc/aura.8
  doc/aura.conf
  doc/aura.conf.5
  doc/completions/bashcompletion.sh
  doc/completions/_aura
  test/pacman.conf
  test/good.PKGBUILD
  test/bad.PKGBUILD

common commons
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wredundant-constraints -Widentities -Wpartial-fields -Wcompat
    -funclutter-valid-hole-fits

  build-depends:
    , base        >=4.12   && <5
    , bytestring  ^>=0.10
    , containers  ^>=0.6
    , megaparsec  >=7      && <10
    , rio         ^>=0.1.17
    , text        ^>=1.2
    , versions    ^>=5

common libexec
  build-depends:
    , aeson                        ^>=2.0
    , aur                          ^>=7.0.5
    , http-client                  >=0.5 && <0.8
    , prettyprinter                >=1.2 && <1.8
    , prettyprinter-ansi-terminal  ^>=1.1
    , scheduler                    >=1.1 && <2.1
    , transformers                 ^>=0.5
    , typed-process                ^>=0.2

library
  import:          commons, libexec
  hs-source-dirs:  lib
  exposed-modules:
    Aura.Build
    Aura.Cache
    Aura.Colour
    Aura.Core
    Aura.Dependencies
    Aura.IO
    Aura.Install
    Aura.Languages
    Aura.Languages.Fields
    Aura.Logo
    Aura.MakePkg
    Aura.Packages.AUR
    Aura.Packages.Repository
    Aura.Pacman
    Aura.Pkgbuild.Fetch
    Aura.Pkgbuild.Records
    Aura.Pkgbuild.Security
    Aura.Security
    Aura.Settings
    Aura.Settings.External
    Aura.Shell
    Aura.State
    Aura.Types
    Aura.Utils

  build-depends:
    , algebraic-graphs  >=0.1 && <0.7
    , filepath          ^>=1.4
    , hashable          ^>=1.4
    , http-types        >=0.9 && <0.13
    , language-bash     >=0.8 && <0.10
    , network-uri       ^>=2.6
    , stm               ^>=2.5
    , time              >=1.8 && <1.10

executable aura
  import:         commons, libexec
  main-is:        aura.hs
  other-modules:
    Aura.Commands.A
    Aura.Commands.B
    Aura.Commands.C
    Aura.Commands.L
    Aura.Commands.O
    Aura.Commands.P
    Aura.Flags
    Aura.Settings.Runtime

  hs-source-dirs: exec
  ghc-options:    -threaded -O2 -with-rtsopts=-N
  build-depends:
    , aura
    , http-client-tls       ^>=0.3
    , optparse-applicative  >=0.14 && <0.17

test-suite aura-test
  import:         commons
  type:           exitcode-stdio-1.0
  main-is:        Test.hs
  hs-source-dirs: test
  ghc-options:    -threaded -with-rtsopts=-N
  build-depends:
    , aura
    , tasty        >=0.11 && <1.5
    , tasty-hunit  >=0.9  && <0.11
