[workspace]
members = [
# The executable
"aura",
# Core libraries
"aura-core", "aura-arch", "aura-common",
# Ecosystem libraries
"raur-curl", "r2d2-alpm"
]

[patch.crates-io]
raur = { git = "https://gitlab.com/davidbittner/raur/", rev = "9cf07a03489a34f47192992105b55ba9140d9fb7" }
pacmanconf = { git = "https://github.com/Morganamilo/pacmanconf.rs", rev = "a6c6a2ad80dd8a50eb952df255e237ac16f3c46d" }

[profile.release]
lto = true
panic = "abort"
# opt-level = "z"  # Reduces final stripped size by ~20%.
