cabal-version: 1.12
name:          aursec
version:       1.0.0
synopsis:      Sweeps the AUR for security flaws in PKGBUILDs.
description:   Sweeps the AUR for security flaws in PKGBUILDs.
category:      System
homepage:      https://github.com/fosskers/aura
author:        Colin Woodbury
maintainer:    colin@fosskers.ca
license:       GPL-3
build-type:    Simple

executable aursec
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   ./.
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wredundant-constraints -Widentities -threaded -O2 -with-rtsopts=-N

  build-depends:
      async
    , aura
    , base             >=4.8 && <5
    , http-client      >=0.5 && <0.8
    , http-client-tls  >=0.3 && <0.4
    , language-bash    >=0.8 && <0.10
    , split            >=0.2 && <0.3
    , text
