[package]
name = "aura-core"
version = "0.1.3"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2021"
description = "Core types and logic for extended Arch Linux package managers."
repository = "https://github.com/fosskers/aura"
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["archlinux", "alpm", "aur", "pacman"]

[dependencies]
alpm = "2.2"
alpm-utils = "2.0"
disown = "1.0"
from_variants = "1.0"
itertools = "0.11"
log = "0.4"
nonempty-collections = "0.1.3"
petgraph = { version = "0.6", default-features = false }
r2d2 = "0.8"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
srcinfo = "1.1"
time = { version = "0.3", features = ["serde", "local-offset"] }
validated = { version = "0.4", features = ["rayon"] }
