[package]
name = "aura-core"
version = "0.4.0"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2021"
description = "Core types and logic for extended Arch Linux package managers."
repository = "https://github.com/fosskers/aura"
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["archlinux", "alpm", "aur", "pacman"]

[dependencies]
r2d2-alpm = { version = "0.2", path = "../r2d2-alpm" }

alpm = "3.0"
alpm-utils = "3.0"
disown = "1.0"
from_variants = "1.0"
itertools = "0.13"
log = "0.4"
nonempty-collections = "0.2.5"
petgraph = { version = "0.6", default-features = false }
r2d2 = "0.8"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
srcinfo = "1.1"
time = { version = "0.3", features = ["serde", "local-offset"] }
validated = { version = "0.4", features = ["rayon"] }
