[package]
name = "aura-pm"
version = "4.0.0-alpha11"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2021"
description = "Install and manage Arch Linux packages."
repository = "https://github.com/fosskers/aura"
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["archlinux", "alpm", "aur", "pacman"]

[[bin]]
name = "aura"
path = "src/main.rs"

[dependencies]
aura-core = { version = "0.2", path = "../aura-core" }
r2d2-alpm = { version = "0.1", path = "../r2d2-alpm" }

alpm = "3.0"
alpm-utils = "3.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
curl = "0.4"
from_variants = "1.0"
i18n-embed = { version = "0.14", features = ["fluent-system"] }
i18n-embed-fl = "0.7"
itertools = "0.12"
linya = "0.3"
log = "0.4"
nonempty-collections = "0.1.4"
num_cpus = "1.16"
pacmanconf = "2.0"
r2d2 = "0.8"
rayon = "1.8"
rust-embed = "8.0"
rustyline = "12"
serde = "1.0"
serde_json = "1.0"
simplelog = "0.12"
srcinfo = "1.1"
sudo = "0.6"
time = { version = "0.3", features = ["parsing"] }
toml = "0.8"
ubyte = "0.10"
unic-langid = { version = "0.9", features = ["macros"] }
validated = { version = "0.4", features = ["rayon"] }
webbrowser = "0.8"
which = "5.0"

[features]
git = ["alpm/git"]

[profile.release]
lto = true
panic = "abort"
strip = true
opt-level = "z"  # Reduces final stripped size by ~20%.
codegen-units = 1
