[package]
name = "aura"
version = "4.0.0-alpha1"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2021"
description = "Install and manage Arch Linux and AUR packages"
# TODO Include `pacman` as a tag.

[dependencies]
aura-core = { version = "0.1", path = "../aura-core" }
r2d2-alpm = { version = "0.1", path = "../r2d2-alpm" }

alpm = "2.2"
alpm-utils = "2.0"
clap = { version = "3.0", features = ["derive"] }
colored = "2.0"
curl = "0.4"
from_variants = "1.0"
i18n-embed = { version = "0.13", features = ["fluent-system"] }
i18n-embed-fl = "0.6"
itertools = "0.10"
linya = "0.3"
log = "0.4"
nonempty = "0.8"
num_cpus = "1.0"
pacmanconf = "2.0"
r2d2 = "0.8"
rayon = "1.5"
rust-embed = "6.3"
rustyline = "10"
serde = "1.0"
serde_json = "1.0"
simplelog = "0.12"
srcinfo = "1.0"
sudo = "0.6"
time = { version = "0.3", features = ["parsing"] }
toml = "0.5"
ubyte = "0.10"
unic-langid = { version = "0.9", features = ["macros"] }
validated = { version = "0.2", features = ["rayon"] }
webbrowser = "0.7"
which = "4.2"

[features]
git = ["alpm/git"]
