[package]
name = "r2d2-alpm"
version = "0.2.0"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2021"
description = "R2D2 resource pools for managing ALPM connections."
repository = "https://github.com/fosskers/aura"
readme = "README.md"
license = "MIT"
keywords = ["database", "pool", "archlinux", "alpm", "pacman"]

[dependencies]
alpm = "4.0"
alpm-utils = "4.0"
pacmanconf = "3.0"
r2d2 = "0.8"

[dev-dependencies]
rayon = "1.8"
