[package]
name = "raur-curl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.36"
raur = { version = "5.0.1", default-features = false, features = ["blocking-trait"], git = "https://gitlab.com/davidbittner/raur/"}
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"


